--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <a link="https://ycchien313.github.io/"><h1>My Github Page</h1></a>   
+        <div class="text-center">
+            <a href="https://github.com/ycchien313/ycchien313.github.io/blob/master/README.md"><h1>README</h1></a>   
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
