--- a/test/index.html
+++ b/test/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="text-center">
-            <a href="https://github.com/ycchien313/ycchien313.github.io/blob/master/README.md"><h1>README</h1></a>   
+            <a href="https://ycchien313.github.io/"><h1>README</h1></a>   
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
