fix. video time

--- a/vincent/index.html
+++ b/vincent/index.html
@@ -381,7 +381,7 @@
                 vincent.style.color = 'purple';
 
                 Swal.fire({
-                    title: '特斯拉是我',
+                    title: '你們還差的遠',
                     imageUrl:
                         'https://lh3.googleusercontent.com/d8zfqm0lGUvtvJc_PTEzZrHYlIn6tlqAYFyA96q5CX-pPnU7ojRsMR81ijTlmYknvatULDM04Yj7hiQ4uXijO5IQ_G-Em6VngyeDFhTHsOZxrS2X_UjfgI-9xwBpmrGsLUI4rgGXBWM=w2400',
                     imageHeight: 400,
@@ -403,7 +403,7 @@
                 }, 1000);
                 setTimeout(() => {
                     typhoonTalk2.style.opacity = 1;
-                }, 5000);
+                }, 7000);
 
                 vincent.classList.add('d-none');
                 unit.classList.add('d-none');
